--- a/TODO
+++ b/TODO
@@ -11,6 +11,8 @@ TODO:
 - API for the Node: extracting informations, selecting scheduling policy
 - better resources allocation APIs (%CPU, set memory)
 - DTD/RNG/XSD schemas for the XML Domain descriptions
+- in python bindings raise an exception if a lookup or connection fails
+  to return a non-None object
 
 Probable TODOs:
 - event on big domain state change (create, crashed, paused, shutdown, destroy)
