--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Feb 21 09:14:07 EST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* Makefile.am: extended make tests to run those in docs/examples
+	* docs/examples/suspend.c docs/examples/*: added an example of
+	  suspend/resume and regenerated
+
 Tue Feb 21 14:21:39 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* TODO: updated
