--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 21 22:00:11 CET 2006 Karel Zak <kzak@redhat.com>
+
+	* TODO: added virsh part
+
 Tue Feb 21 09:14:07 EST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am: extended make tests to run those in docs/examples
