* python/tests/Makefile.am: added the create.py in the regression tests Daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 23 05:31:46 EST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* python/tests/Makefile.am: added the create.py in the regression tests
+
 Thu Feb 23 05:13:03 EST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvirt.h[.in] src/libvirt.c src/xend_internal.[ch]
