--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Feb 23 11:41:06 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* NEWS configure.in docs/libvir.html docs/news.html: preparing the
+	  release of 0.0.5
+	* include/libvirt.h.in: fixed APIs definition
+
 Thu Feb 23 05:31:46 EST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* python/tests/Makefile.am: added the create.py in the regression tests
