--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Feb 27 16:32:55 EST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* include/virterror.h src/libvirt_sym.version: exported
+	  virDefaultErrorFunc()
+	* src/sexpr.c src/xen_internal.c src/virterror.c include/virterror.h:
+	  adding more error reporting though the code, nearly complete.
+	* src/sexpr.c: added specific error function to avoid an error report.
+
 Mon Feb 27 14:56:57 EST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* include/virterror.h src/virterror.c src/xend_internal.c: more work
