--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb 27 17:36:29 EST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* doc//*: rebuilt
+
 Mon Feb 27 17:33:16 EST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* TODO: updated, and added python hooks for error handling
