--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar  4 09:59:13 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: another patch from David Lutterkort fixing a typo
+	  when generating physical block devices descriptions.
+
 Sat Mar  4 09:56:18 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* libvirt.spec.in: applied patch from David Lutterkort adding
