--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Mar 15 13:10:25 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/hash.c src/hash.h src/internal.h src/libvirt.c src/sexpr.c
+	  src/sexpr.h src/virsh.c src/virterror.c src/xen_internal.c
+	  src/xen_internal.h src/xend_internal.c src/xend_internal.h
+	  src/xml.c src/xml.h: applied cb/indent to homogenize the source
+	  style, as a first pass.
+
 Fri Mar 10 11:07:58 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in: applied patch for --with-xen-distdir option from 
