--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Mar 23 16:40:37 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/xs_internal.c src/xs_internal.h include/virterror.h 
+	  src/virterror.c: created a new module related to Xen Store accesses
+	* src/libvirt.c src/xen_internal.[ch] src/xend_internal.[ch]:
+	  nearly completed the separation of the code from the different modules
+
 Wed Mar 22 14:43:16 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* python/tests/create.py: add one more image path
