--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 24 23:57:56 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* include/virterror.h: fix typos pointed by Jim Meyering
+
 Fri Mar 24 23:36:05 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* include/virterror.h: applied patch from Daniel Berrange for out of
