--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Mon Mar 27 17:22:16 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* doc/*: updated module list and rebuilt
+	* include/libvirt.h include/libvirt.h.in: added intialization function
+	* include/virterror.h src/virterror.c: one more error code
+	* src/internal.h: first part of Jim's format checking
+	* src/libvirt.c src/xen_internal.[ch] src/xend_internal.[ch]
+	  src/xs_internal.[ch]: initialization and registration of drivers
+	
 Sat Mar 25 11:45:06 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/Makefile.am: add  driver.h to SOURCES as pointed by Jim Meyering
