use stdout rather than stderr, improve allocation checks

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  6 11:32:46 CEST 2006 Karel Zak <kzak@redhat.com> 
+
+	* src/virsh.c: use stdout for standard outputs, improve 
+	 allocation checks
+
 Wed Apr  5 09:32:54 EDT 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/hash.c: tiny fix
